--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><link rel="stylesheet" type="text/css" href="styles.css">
+  <head><link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Carolin Diaz</title>
   </head>
   <body>
