--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <p>I was born in a small island held between  the middle of the North Atlactic Ocean and the Caribean Sea. I am from a country divided in two. Where the palms fly high and the heat shines bright. I am from a place where people are constatly smiling,dancing and eating. I am from Dominican Republic.
 </p>
 <h3> My Journey</h3>
-<p> I moved to the US at the age of 4. We lived in Dorchester with my older siblings. It was a big mint green stacker.  </p>
+<p> I moved to the US at the age of four. We lived in Dorchester with my older siblings. It was a big mint green stacker.  </p>
 </body>
 </html>
