--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </p>
 <h2> My Journey</h2>
 <p> I immigrated to the US at the age of 4 with my mom,dad and older sister, all to achieve the american dream. I have lived in both Boston and Florida. This has allowed me to build many bonds with different people. I am able to call all three places my home.   </p>
-     <h2> 5 Quick Facts </h2>
+   <img src="https://miro.medium.com/max/350/1*KR_VTNS8rQW4vkCplfMmug.jpeg" </img>
+   <h2> 5 Quick Facts </h2>
   <ol>
     <li> I have 9 siblings.Yes, with me that makes 10! </li>
     <li>I am the first in my family to obtain a college degree. </li>
